Fix! UI Overlap Fix for Hero Card

--- a/src/app/app/main-content/hero-card/hero-card.css
+++ b/src/app/app/main-content/hero-card/hero-card.css
@@ -8,14 +8,14 @@
 .total-card{
   display: flex;
   flex-direction: column;
-  height: 16rem;
+  height: 19rem;
   overflow: visible;
   font-size: 1.5rem;
 
   position: relative; /* Essential: Keeps the absolute image inside the card */
-  width: 43.75rem;
+  width: 30rem;
   min-height: 100%;
-  padding: 1.5rem;
+
   border-radius: 1rem;
 
   justify-content: start;
@@ -66,7 +66,7 @@
   font-size: 0.875rem;
   letter-spacing:0.03rem;
   line-height: 1.2;
-  color: #7843ee;
+  color: #9e73ff;
 
 }
 
